# dvc-semantic-segmentation

./: .gitignore  .gitmodules  control.yaml  data.dvc  dvc.yaml  environment.yml  pyproject.toml  scripts.sh  train.yaml
.dvc/: config
code/: compute_task_data.py  download_data.py  eval.py  train.py
code/create/: process_for_labelstudio.py
code/evaluation/: eval.py  utilities.py
code/helpers/: task_parsers.py
code/loaders/: configurator.py  dataset.py  prepare.py
code/log/: logger.py
code/loops/: run.py  train_epoch.py  val_epoch.py
code/model/: create_model.py  reload_model.py
code/utils/: loss.py  plotting.py  task_parsers.py
data/: .gitignore  labelstudio-pets-dataset.json.dvc
data/computed/: .gitignore
metrics/datapoints/: .gitignore
notebooks/: .gitignore
