[tool.poetry]
name = "dvc-semantic-segmentation"
version = "0.1.0"
description = "This is a repository for testing out semantic segmentation NN architectures, Datasets, Version Control, and Labeling Software."
authors = ["Ajay Bhargava <bhargava.ajay@gmail.com>"]
readme = "README.md"
packages = [{include = "dvc_semantic_segmentation"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "1.13.1"
scipy = "^1.10.0"
torchvision = "^0.14.1"
ipykernel = "^6.20.1"
ipython = "^8.8.0"
matplotlib = "^3.6.3"
label-studio-converter = "^0.0.48"
scikit-learn = "^1.2.1"
segmentation-models-pytorch = "^0.3.2"
scikit-image = "^0.20.0"
albumentations = "^1.3.0"
iprogress = "^0.4"
ipywidgets = "^8.0.4"
wandb = "^0.14.2"
dvc = "^2.55.0"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
